# bnb-regime-guard-skill

./: LICENSE  README.md  pyproject.toml
data/: sample_backtest_series.json  sample_market_snapshot.json
docs/: backtest_report.json  index.html  sample_signal.json
skills/regime-guard-cmc-strategy/: SKILL.md
src/regime_guard/: __init__.py  backtest.py  cli.py  cmc_adapter.py  engine.py
submission/: DORAHACKS_BUIDL.md  FINAL_SUBMISSION_CHECKLIST.md  STRATEGY_SPEC.md
tests/: test_backtest.py  test_engine.py
